--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -5,6 +5,13 @@
   position: relative;
 }
 
+// img Swiper
+.room-images-swiper {
+  width: 600px;
+  height: 400px;
+  border-radius: 4px;
+}
+
 .carousel-box {
   // height: 500px;
   // width: 500px;
