--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -19,16 +19,19 @@
 .carousel-container {
   display: flex;
   transition: transform 0.5s ease-in-out;
+  width: 100%;
 
   .carousel-item {
     min-width: 100%;
     box-sizing: border-box;
+    width: 100%;
     display: flex;
     // flex-direction: column;
     justify-content: center;
     // align-items: center;
     padding: 20px;
     position: relative;
+    flex-shrink: 0;
   }
 
   .carousel-item-description {
@@ -42,8 +45,36 @@
     padding: 15px;
     // height: 100%;
 
-    h2 {
-      top: 0;
+    .h2-carousel {
+      font-size: 26px;
+      margin-bottom: 10px;
+    }
+
+    .sd-carousel {
+      font-size: 20px;
+      margin-bottom: 50px;
+    }
+    .size-carousel {
+      font-size: 18px;
+    }
+    .more-btn-carousel {
+      position: absolute;
+      font-size: 18px;
+      border: none;
+      background: none;
+      bottom: 90px;
+      cursor: pointer;
+      transition: underline 0.5s ease;
+    }
+    .more-btn-carousel:hover::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -2px; /* Отступ под текстом */
+      width: 100%;
+      height: 2px; /* Толщина линии */
+      background-color: #000; /* Цвет подчёркивания */
+      animation: underline 0.5s ease;
     }
 
     // p {
@@ -62,7 +93,7 @@
         // font-size: 18px;
         padding: 8px 16px;
         cursor: pointer;
-        margin: 0.3px;
+        margin: 0.5px;
       }
       .carousel-btn-book {
         display: flex;
@@ -108,4 +139,101 @@
     object-position: center;
     object-fit: cover;
   }
+}
+
+.modal-overlay-carousel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(20px);
+}
+
+.modal-content-carousel {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+  color: $main-color;
+  // width: 1100px;
+  // max-width: $width-max;
+  max-width: $width-content;
+  height: 1000px;
+  h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+}
+.modal-text-content-carousel {
+  text-align: left;
+  margin: 0 20px;
+  color: $main-color;
+
+  .h2-name-modal {
+    font-size: 30px;
+    margin: 0;
+  }
+  h4 {
+    margin-top: 5px;
+    font-size: 22px;
+  }
+  .p-text-modal {
+    font-size: 18px;
+    position: relative;
+  }
+  .p-other-modal {
+    margin: 4px;
+    font-size: 18px;
+  }
+  .p-other-modal::before {
+    content: "•";
+    position: absolute;
+    left: -8px;
+    // padding-right: 15px;
+  }
+  .p-size-modal {
+    padding: 5px;
+    font-size: 22px;
+    // text-align: right;
+  }
+}
+.description-modal {
+  text-align: left;
+  margin: 20px 10px;
+  font-size: 20px;
+  color: $main-color;
+}
+
+// .modal-content img {
+//   max-width: 100%;
+//   max-height: 80vh;
+//   border-radius: 5px;
+// }
+
+.modal-content-carousel button {
+  // margin-top: 10px;
+  // padding: 5px 10px;
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 20px;
+}
+.modal-div-container-carousel {
+  // max-width: $width-content;
+  // width: 700px;
+  // background-color: antiquewhite;
+  display: flex;
+}
+.modal-room-images-swiper {
+  width: 700px;
+  height: 500px;
 }
