--- a/src/app/styles/ui/clock.scss
+++ b/src/app/styles/ui/clock.scss
@@ -1,12 +1,12 @@
 .bs-usefull__info {
   display: flex;
-  padding: 15px;
-  text-align: center;
-  justify-content: center;
+  padding: 5px;
+  text-align: left;
+  justify-content: left;
 }
 .bs-usefull__info-time {
   font-size: 22px;
-  padding: 25px 10px 10px 10px;
+  padding: 10px;
 }
 .irframe {
   overflow: hidden;
