--- a/src/app/styles/pages/mainPage.scss
+++ b/src/app/styles/pages/mainPage.scss
@@ -5,13 +5,14 @@
 
   margin: 0 auto;
   max-width: $width-max;
-  color: $main-color;
+  color: $main-text;
 }
 
 .img-block {
   max-width: $width-max;
   height: 900px;
-  background-image: url(https://hotel-blacksea.com/img/galleryfull39.jpg);
+  // background-image: url(https://hotel-blacksea.com/img/galleryfull39.jpg);
+  background-image: url(https://avatars.mds.yandex.net/get-altay/12813969/2a0000018e0845851af875cf8950488541e8/XXXL);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -64,116 +65,179 @@
 .info {
   display: flex;
   margin: 0 auto;
-  // max-width: $width-content ;
   max-width: 1200px;
-  padding-top: 20px;
+  padding: 40px 20px;
+  background-color: $backgound-color;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+  margin-bottom: 80px;
 
-  .info-img {
-    width: 460px;
-  }
   .info-description {
     text-align: left;
-    margin: 0 0 0 22px;
+    margin-left: 22px;
     padding: 20px;
     position: relative;
+    width: 100%;
 
-    // border-bottom: 1px solid black;
     h2 {
       font-size: 36px;
-      margin-top: 27px;
-      // border-right: 1px solid black;
-    }
-  }
+      margin-top: 0;
+      margin-bottom: 20px;
+      color: $main-color;
+      position: relative;
+      padding-bottom: 10px;
 
-  .info-description::after {
-    content: "";
-    position: absolute;
-    top: -20px;
-    right: 0;
-    width: 1px;
-    height: 99.3%;
-    background-color: #000;
-  }
-  .info-description::before {
-    content: "";
-    position: absolute;
-    bottom: 5%;
-    left: 0;
-    width: 105.5%;
-    height: 1px;
-    background-color: #000;
-    left: -39px;
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 80px;
+        height: 3px;
+        background-color: $a-color;
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 40px;
+      right: 0;
+      width: 1px;
+      height: calc(100% - 80px);
+      background-color: rgba($main-text, 0.1);
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 40px;
+      left: -22px;
+      width: calc(100% + 22px);
+      height: 1px;
+      background-color: rgba($main-text, 0.1);
+    }
   }
 
   .info-des-short {
     font-size: 25px;
-
-    margin: 10px 0;
+    margin: 20px 0;
+    color: $main-text;
+    font-weight: 500;
+    line-height: 1.3;
   }
+
   .info-des-long {
     font-size: 20px;
     padding-bottom: 20px;
+    color: lighten($main-text, 15%);
+    line-height: 1.6;
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
 // БЛОК УСЛУГ
 .services-block {
-  margin: 30px auto;
+  margin: 0 auto;
   max-width: $width-content;
+  margin-bottom: 100px;
+  position: relative;
 
   h2 {
-    font-size: 46px;
+    font-size: 42px;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    color: $main-text;
+    position: relative;
+    padding-bottom: 15px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 80px;
+      height: 3px;
+      background: $main-color;
+    }
   }
 
   .services-background-block {
-    // background-image: url(https://hotel-blacksea.com/img/services_background.jpg);
     background-image: url(https://avatars.mds.yandex.net/get-altay/6057477/2a00000180c7ec8be59e4d690b814261db60/XXXL);
+    // background-image: url(https://avatars.mds.yandex.net/get-altay/12813969/2a0000018e0845851af875cf8950488541e8/XXXL);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 800px;
+    height: 650px;
     position: relative;
-    object-fit: cover;
+    border-radius: 8px;
+    overflow: hidden;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0.1) 0%,
+        rgba(0, 0, 0, 0.3) 100%
+      );
+    }
   }
+
   .services-white-block {
-    // z-index: 1;
     background-color: white;
     position: absolute;
     text-align: left;
-    width: 700px;
-    height: 400px;
-    right: -140px;
-    top: 200px;
-
-    -webkit-box-shadow: -11px 12px 8px 1px rgba(34, 60, 80, 0.2);
-    -moz-box-shadow: -11px 12px 8px 1px rgba(34, 60, 80, 0.2);
-    box-shadow: -11px 12px 8px 1px rgba(34, 60, 80, 0.2);
+    width: 600px;
+    padding: 40px;
+    right: 50px;
+    top: 100px;
+    border-radius: 8px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+    border-top: 4px solid $main-color;
 
     h3 {
       font-size: 28px;
-      padding: 20px;
+      margin-bottom: 25px;
+      color: $main-color;
+      position: relative;
+      padding-bottom: 10px;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 50px;
+        height: 2px;
+        background: $a-color;
+      }
     }
+
     p {
-      padding: 5px 35px;
-      font-size: 24px;
-    }
-    p::before {
-      content: "•";
-      position: absolute;
-      left: 0;
-      padding-left: 15px;
-    }
-    button {
-      font-size: 24px;
-      padding: 8px 14px;
-      border-radius: 10px;
-      cursor: pointer;
-      background: none;
-      margin: 30px 30px;
-    }
-    button:hover {
+      padding: 12px 0 12px 30px;
+      font-size: 20px;
+      color: $main-text;
+      line-height: 1.5;
+      position: relative;
+      margin-bottom: 8px;
+
+      &::before {
+        content: "•";
+        position: absolute;
+        left: 0;
+        color: $a-color;
+        font-size: 24px;
+        line-height: 1;
+      }
     }
   }
 }
@@ -182,6 +246,7 @@
 .advantages-block {
   margin: 50px auto;
   max-width: $width-content;
+  margin-bottom: 100px;
   h2 {
     font-size: 46px;
     text-align: left;
@@ -202,6 +267,7 @@
 // Информация
 .info-hotel {
   margin: 30px auto;
+  margin-bottom: 100px;
   max-width: $width-max;
   background-color: $main-color;
 }
@@ -209,6 +275,7 @@
 //Блок клиентов
 .client-block {
   margin: 30px auto;
+  // margin-bottom: 100px;
   max-width: $width-max;
   // object-position: center;
   // object-fit: cover;
@@ -226,13 +293,14 @@
 }
 
 //ОТзывы
-// .reviews {
-//   // background-color: aqua;
-//   max-width: $width-content;
-//   margin: 50px auto;
-//   text-align: center;
-//   justify-content: center;
-// }
+.reviews {
+  // background-color: aqua;
+  max-width: $width-content;
+  margin: 50px auto;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 100px;
+}
 // Карта
 // .map-contacts {
 
