--- a/src/app/styles/ui/gallery.scss
+++ b/src/app/styles/ui/gallery.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
   margin: 2rem 0;
+  margin-bottom: 100px;
 }
 
 .h2-gallery {
@@ -12,7 +13,7 @@
   max-width: $width-content;
   margin: 0 auto;
   font-size: 2.5rem;
-  color: $main-color;
+  // color: $main-color;
   margin-bottom: 1.5rem;
   padding-top: 1rem;
   font-family: "Playfair Display", serif;
