--- a/src/app/styles/pages/mainPage.scss
+++ b/src/app/styles/pages/mainPage.scss
@@ -75,10 +75,13 @@
     width: 560px;
     margin-bottom: 200px;
     color: rgb(245, 245, 245);
-  }
-  .wiget-img {
-  }
 
+    position: relative;
+    font-weight: 700;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8), 0 4px 12px rgba(0, 0, 0, 0.5);
+    padding-left: 20px;
+    z-index: 2;
+  }
   &::before {
     content: "";
     position: absolute;
