--- a/src/app/styles/ui/navBar.scss
+++ b/src/app/styles/ui/navBar.scss
@@ -73,6 +73,7 @@
         h2 {
           margin: 0;
           font-size: 28px;
+          text-align: left;
           color: $main-text;
           font-weight: 700;
         }
