--- a/src/app/styles/pages/mainPage.scss
+++ b/src/app/styles/pages/mainPage.scss
@@ -53,9 +53,9 @@
   max-width: $width-max;
   height: 900px;
   // background-image: url(https://hotel-blacksea.com/img/galleryfull39.jpg);
-  background-image: url(https://avatars.mds.yandex.net/get-altay/12813969/2a0000018e0845851af875cf8950488541e8/XXXL);
+  background-image: url(https://wikiway.com/upload/hl-photo/871/adler_93.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: center bottom;
   background-repeat: no-repeat;
   position: relative;
   transition: all 0.3s ease;
@@ -211,7 +211,8 @@
   }
 
   .services-background-block {
-    background-image: url(https://avatars.mds.yandex.net/get-altay/6057477/2a00000180c7ec8be59e4d690b814261db60/XXXL);
+    // background-image: url(https://avatars.mds.yandex.net/get-altay/6057477/2a00000180c7ec8be59e4d690b814261db60/XXXL);
+    background-image: url(https://www.basenybielsko.pl/wp-content/uploads/2014/12/sklep-background.jpg);
     // background-image: url(https://avatars.mds.yandex.net/get-altay/12813969/2a0000018e0845851af875cf8950488541e8/XXXL);
     background-size: cover;
     background-position: center;
