--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -249,14 +249,14 @@
 
 .modal-image-section {
   flex: 1;
-  min-width: 0; // важно для корректной работы свайпера
+  min-width: 0; // важно для корректной работы
 
   .modal-room-images-swiper {
     height: 400px;
     border-radius: 8px;
     overflow: hidden;
 
-    // Стили для свайпера (адаптируйте под ваш SwiperComponent)
+    // Стили для свайпера
     .swiper-slide {
       img {
         width: 100%;
@@ -293,21 +293,27 @@
 }
 
 .modal-features-container {
+  // background-color: antiquewhite;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
   margin-top: 20px;
 
   .feature-category {
+    // background-color: aqua;
     .category-title {
       font-size: 18px;
+      // margin-top: -20px;
       margin-bottom: 10px;
       color: #555;
+      text-align: left;
+      padding-left: 14px;
     }
 
     .feature-items {
       display: flex;
       flex-direction: column;
+      text-align: left;
       gap: 8px;
 
       .feature-item {
@@ -323,6 +329,11 @@
         }
       }
     }
+  }
+  .feature-category:not(:last-child) {
+    border-right: 1px solid black;
+    padding-right: 10px;
+    // padding-top: 4px;
   }
 }
 
