--- a/src/app/styles/ui/gallery.scss
+++ b/src/app/styles/ui/gallery.scss
@@ -14,6 +14,7 @@
   margin: 0 auto;
   font-size: 2.5rem;
   // color: $main-color;
+  padding-top: 45px;
   margin-bottom: 1.5rem;
   padding-top: 1rem;
   font-family: "Playfair Display", serif;
