--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -2,7 +2,8 @@ $width-content: 1300px;
 $width-max: 100vw;
 
 // $main-color: #2a2e49;
-$main-color: #0288d1;
+$main-color: #0693e3;
 $main-text: #263238;
-$backgound-color: #e0f7fa;
+// $backgound-color: #e0f7fa;
+$backgound-color: #ffffff;
 $a-color: #ff7043;
