--- a/src/app/styles/ui/infoHotel.scss
+++ b/src/app/styles/ui/infoHotel.scss
@@ -2,18 +2,18 @@
 
 .info-container {
   max-width: 1040px;
+  // height: 400px;
   margin: 20px auto;
-
   display: flex;
   justify-content: space-between;
   gap: 30px;
   background: rgba(255, 255, 255, 0.95);
   padding: 20px 30px;
 
-  border-radius: 10px;
+  // border-radius: 50px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
-  border-top: 3px solid $main-color;
-  border-bottom: 3px solid $main-color;
+  border-top: 30px solid $main-color;
+  border-bottom: 30px solid $main-color;
 }
 
 .info-desc-container {
@@ -56,7 +56,7 @@
       position: absolute;
       bottom: -5px;
       left: 0;
-      width: 170px;
+      width: 250px;
       height: 2px;
       background: $a-color;
     }
@@ -95,7 +95,7 @@
   }
 
   &:first-child {
-    margin-top: 0;
+    margin-top: 20px;
   }
 }
 
