--- a/src/app/styles/ui/mapLocation.scss
+++ b/src/app/styles/ui/mapLocation.scss
@@ -85,7 +85,7 @@
       font-size: 18px;
       margin-right: 160px;
       cursor: pointer;
-      padding: 8px 20px;
+      padding: 8px 20px 10px 20px;
       border-radius: 30px;
       color: $main-color;
       background: white;
