--- a/src/app/styles/ui/infoHotel.scss
+++ b/src/app/styles/ui/infoHotel.scss
@@ -12,8 +12,8 @@
 
   // border-radius: 50px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
-  border-top: 30px solid $main-color;
-  border-bottom: 30px solid $main-color;
+  // border-top: 30px solid $main-color;
+  // border-bottom: 30px solid $main-color;
 }
 
 .info-desc-container {
