--- a/src/app/styles/ui/hotelWidget.scss
+++ b/src/app/styles/ui/hotelWidget.scss
@@ -6,10 +6,11 @@
   border-radius: 8px;
 }
 
-/* Жёлтая кнопка → #2a2e49 */
+/* Стили для кнопки */
 #booking-widget-container .btn-primary {
   background-color: #2a2e49 !important;
   border-color: #2a2e49 !important;
+  color: white !important;
 }
 
 /* Адаптивность */
