--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,6 +1,9 @@
 $width-content: 1300px;
 $width-max: 100vw;
 
+$mobile: 390px;
+$mobile-landscape: 844px;
+
 // $main-color: #2a2e49;
 $main-color: #0693e3;
 $main-text: #263238;
